--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -3,9 +3,11 @@
 one:
   name: MyString
   description: MyText
-  price: 
+  price: 1
+  category: one
 
 two:
   name: MyString
   description: MyText
-  price: 
+  price: 1
+  category: one
